feat: decode datamatix and barcode with weight
