# src/routes/products.ts
@@ -3,7 +3,7 @@ import { Products } from '../controllers/products';
 let productsRoutes = express.Router()
 productsRoutes.post( "/", Products.Create );
 productsRoutes.get( "/:id", Products.FindById );
-productsRoutes.get( "/ean/:ean", Products.FindByBarcode );
+productsRoutes.get( "/code/:code", Products.FindByCode );
 productsRoutes.get( "/tag/:tagId", Products.FindByTagId );
 productsRoutes.get( "/datamatrix/:datamatrixId", Products.FindByDatamatrixId );
 productsRoutes.delete( "/:id", Products.Delete );
